--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,17 @@
   display: flex;
   height: 70px;
   justify-content: flex-end;
-  margin: 30px 120px 0 0;
-  position:sticky;
-  top:0;
+  margin: 20px 120px 20px 0;
   background-color: white;
 }
 
 .navContainer li {
   font-size: 35px;
+
+}
+
+.nav-item {
+  color: black;
 }
 
 
@@ -86,6 +89,7 @@
 .names {
   display: flex;
   flex-direction: row;
+  flex-wrap:wrap;
   justify-content: center;
   list-style-type: none;
 
@@ -111,20 +115,21 @@
 .singleUserContainer {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  flex-wrap: wrap;
   justify-content: center;
+  margin-left: 30px;
 }
 
 
 .identity {
   top: 100px;
   position: sticky;
-  margin: 0 50px;
+  margin: 25px;
 }
 
 .singleUserContainer img {
-  width: 420px;
-  margin-bottom: 30px;
+  width: 450px;
+  margin-bottom: 20px;
 }
 
 
@@ -136,17 +141,23 @@
 
 
 .allPosts {
-  background-color: #569eeb;
+  background-color: white;
+  margin-top:25px;
   padding: 10px;
   width: 500px;
   height: 500px;
   overflow: auto;
   display: flex;
   flex-wrap: wrap;
+  color: white;
 }
 
 .singlePost {
-  background-color: white;
-  width: 100px;
-  margin: 15px;
+  background-color: #569eeb;
+  width: 500px;
+  margin: -10px 15px 15px 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
 }
