--- a/src/App.css
+++ b/src/App.css
@@ -133,16 +133,28 @@
 }
 
 
-/* .userInfo {
-  text-align: center;
-  margin-top: 50px;
-} */
+.optionsContainer {
+  width: 500px;
+  height: 500px;
+  border: 1px solid black;
+  padding: 0;
+  margin: 0;
 
+}
 
+.optionsContainer .btn {
+  width: 250px;
+}
+
+.options {
+  display: flex;
+  flex-direction: row;
+}
 
 .allPosts {
   background-color: white;
   margin-top:25px;
+  margin-right: 0;
   padding: 10px;
   width: 500px;
   height: 500px;
@@ -155,9 +167,18 @@
 .singlePost {
   background-color: #569eeb;
   width: 500px;
-  margin: -10px 15px 15px 15px;
+  margin: 15px 0;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
 
+.optionsContainer form {
+  background-color: #f4b942;
+  display: flex;
+  flex-direction: column;
+}
+
+form .formItem {
+  margin: 15px;
 }
