--- a/src/App.css
+++ b/src/App.css
@@ -23,20 +23,19 @@ p {
 .navContainer {
   display: flex;
   height: 70px;
-  justify-content: flex-end;
-  margin: 20px 120px 20px 0;
+  margin-top: 50px;
+  justify-content: center;
   background-color: white;
-  color: #569eeb;
 }
 
 .navContainer li {
-  font-size: 35px;
-
+  font-size: 20px;
 }
 
 .nav-item {
-  color: black;
+  color: gray;
 }
+
 
 
 /* AllUsers.js */
@@ -72,8 +71,9 @@ p {
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #569eeb;
+  background-color:#8fd3f4;
 }
+
 
 .indivisual:hover .overlay {
   opacity: 1;
@@ -105,7 +105,7 @@ p {
 .names li {
   margin: 15px;
   text-decoration: none;
-  background-color: #569eeb;
+  background-color: #8fd3f4;
   padding: 10px;
   border-radius: 20px;
   color: white;
@@ -137,7 +137,10 @@ p {
   width: 400px;
   margin-bottom: 20px;
   border-radius: 50%;
-
+  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
+  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  /* Opera */
+  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 
 }
 
@@ -161,7 +164,7 @@ p {
 }
 
 .userPosts {
-  background-color: #569eeb;
+  background-color: #8fd3f4;
   padding: 20px;
   width: 500px;
   height: 488px;
@@ -175,11 +178,15 @@ p {
 
   background-color: white;
   width: 500px;
-  margin: 5px;
+  margin: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: auto;
+  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
+  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  /* Opera */
+  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 }
 
 
@@ -233,7 +240,7 @@ form button {
   display:block;
   height:13em;
   width:13em;
-  padding:1em;
+  padding:3em 1em;
   overflow:auto;
   -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
   -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
