--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,7 @@ p {
 }
 
 .identitySide .userPosts {
-  margin-bottom: 50px;
+  margin-bottom: 70px;
   padding: 20px;
   width: 500px;
   height: 488px;
@@ -212,6 +212,10 @@ p {
   -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
   /* Opera */
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+}
+
+.noPost {
+  margin: 50px;
 }
 
 
